Recreation of pages as app has new purpose

--- a/Bake/Bake/Bake.csproj
+++ b/Bake/Bake/Bake.csproj
@@ -16,16 +16,16 @@
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Update="Views\Pages\CreatePost.xaml">
+    <EmbeddedResource Update="Views\Pages\CreateARecipePage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Views\Pages\HomePage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
-    <EmbeddedResource Update="Views\Pages\ProfilePage.xaml">
+    <EmbeddedResource Update="Views\Pages\ShoppingListPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
-    <EmbeddedResource Update="Views\Pages\Suggested.xaml">
+    <EmbeddedResource Update="Views\Pages\YourRecipesPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
   </ItemGroup>
